tests/fixtures/invalid/tortura_alcance.syn
#lang: es
funcion principal() -> nulo:
    si 1:
        interna = 42
    log(interna)
